implemented search bar in the movie list screen

--- a/src/app/movies/pages/movie-details/movie-details.component.html
+++ b/src/app/movies/pages/movie-details/movie-details.component.html
@@ -1,1 +1,23 @@
 <p>movie-details works!</p>
+
+<div class="jumbotron">
+    <h1 class="display-4">Movie Information</h1>
+    <p class="lead">Below you can find information about a movie:</p>
+    <hr class="my-4">
+    <div class="row">
+      <!-- <div class="col-md-6">
+        <p><strong>Title:</strong> {{ title }}</p>
+        <p><strong>Original Title:</strong> {{ original_title }}</p>
+        <p><strong>Release Date:</strong> {{ release_date }}</p>
+        <p><strong>Popularity:</strong> {{ popularity }}</p>
+        <p><strong>Vote Average:</strong> {{ vote_average }}</p>
+      </div>
+      <div class="col-md-6">
+        <p><strong>Overview:</strong> {{ overview }}</p>
+        <p><strong>Genre IDs:</strong> {{ genre_ids }}</p>
+        <p><strong>Adult:</strong> {{ adult }}</p>
+        <p><strong>Video:</strong> {{ video }}</p>
+        <p><strong>Vote Count:</strong> {{ vote_count }}</p>
+      </div> -->
+    </div>
+  </div>
