--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -15,7 +15,7 @@
                 </li>                
                
             </ul>
-            <form   class="d-flex" 
+           <!--  <form   class="d-flex" 
                     role="search"
                     (ngSubmit)="emitMovie()">
                 <input 
@@ -26,7 +26,7 @@
                         [(ngModel)]="movieTitle">
 
                 <button class="btn btn-outline-success" type="submit">Search</button>
-            </form>
+            </form> -->
         </div>
     </div>
 </nav>
