--- a/src/app/movies/pages/movie-list/movie-list.component.html
+++ b/src/app/movies/pages/movie-list/movie-list.component.html
@@ -1,6 +1,20 @@
 <div class="row">
-    <div class="col-md-4 col-sm-6" *ngFor="let movie of movieList">
+    <div class="col-md-6 col-sm-6 mx-auto mb-3">
+        <form class="d-flex" role="search" (ngSubmit)="searchMovie()">
 
+            <input class="form-control me-2" 
+                type="text" placeholder="Search" 
+                aria-label="Search"
+                name="movieTitle"
+                [(ngModel)]="movieTitle">
+
+            <button class="btn btn-outline-success" type="submit">Search</button>
+        </form>
+    </div>
+</div>
+
+<div class="row">
+    <div class="col-md-4 col-sm-6 mx-auto mb-3" *ngFor="let movie of movieList">
         <div class="card">
             <img class="card-img-top" [src]="movie.poster_path | posterImage:'w500' " alt="Card image cap">
             <div class="card-body">
