Creation of movie details page and start of service and login component

--- a/src/app/movies/pages/movie-list/movie-list.component.html
+++ b/src/app/movies/pages/movie-list/movie-list.component.html
@@ -24,7 +24,7 @@
                     <li class="list-group-item">{{movie.popularity}}</li>
                 </ul>
             </div>
+            <button class="btn btn-outline-dark" type="submit" [routerLink]="['/movie-details', movie.id]">Know more...</button>
         </div>
-
     </div>
 </div>
