--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,1 +1,19 @@
-<p>login works!</p>
+<div class="card w-50 mx-auto mt-5">
+    <div class="card-header">
+      <h3>Iniciar sesión</h3>
+    </div>
+    <div class="card-body">
+      <form (ngSubmit)="login()" class="mx-auto my-4 ">
+        <div class="form-group">
+          <label>Nombre de usuario:</label>
+          <input type="text" class="form-control form-control-lg" [(ngModel)]="username" required>
+        </div>
+        <div class="form-group">
+          <label>Contraseña:</label>
+          <input type="password" class="form-control form-control-lg" [(ngModel)]="password" required>
+        </div>
+        <button type="submit" class="btn btn-primary btn-lg btn-block">Iniciar sesión</button>
+      </form>
+    </div>
+  </div>
+  
