--- a/src/app/movies/pages/movie-details/movie-details.component.html
+++ b/src/app/movies/pages/movie-details/movie-details.component.html
@@ -1,23 +1,35 @@
-<p>movie-details works!</p>
+<div class="jumbotron col ">
+    <div class="row d-flex justify-content-center">
 
-<div class="jumbotron">
-    <h1 class="display-4">Movie Information</h1>
-    <p class="lead">Below you can find information about a movie:</p>
-    <hr class="my-4">
-    <div class="row">
-      <!-- <div class="col-md-6">
-        <p><strong>Title:</strong> {{ title }}</p>
-        <p><strong>Original Title:</strong> {{ original_title }}</p>
-        <p><strong>Release Date:</strong> {{ release_date }}</p>
-        <p><strong>Popularity:</strong> {{ popularity }}</p>
-        <p><strong>Vote Average:</strong> {{ vote_average }}</p>
-      </div>
-      <div class="col-md-6">
-        <p><strong>Overview:</strong> {{ overview }}</p>
-        <p><strong>Genre IDs:</strong> {{ genre_ids }}</p>
-        <p><strong>Adult:</strong> {{ adult }}</p>
-        <p><strong>Video:</strong> {{ video }}</p>
-        <p><strong>Vote Count:</strong> {{ vote_count }}</p>
-      </div> -->
+        <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 d-flex justify-content-center mx-auto mb-3">
+            <img class="card-img-top img-fluid" [src]="movie.poster_path | posterImage:'w500' " alt="Card image cap">
+        </div>
+
+        <div class="col">
+            <h1 class="display-4">Movie Information</h1>
+            <p class="lead">Below you can find information about a movie:</p>
+            <hr class="my-4">
+            <div class="row">
+                <div class="col-md-6 col-xs-12">
+                    <p><strong>Title:</strong> {{ movie.title }}</p>
+                    <p><strong>Original Title:</strong> {{ movie.original_title }}</p>
+                    <p><strong>Release Date:</strong> {{ movie.release_date }}</p>
+                    
+                </div>
+                <div class="col-md-6">
+                    <p><strong>Popularity:</strong> {{ movie.popularity }}</p>
+                    <p><strong>Vote Average:</strong> {{ movie.vote_average }}</p>
+                    <p><strong>Vote Count:</strong> {{ movie.vote_count }}</p>
+                    
+                </div>
+            </div>
+
+            <div class="row">
+                <div class="col">
+                    <p><strong>Overview:</strong> {{ movie.overview }}</p>
+                </div>
+            </div>
+        </div>
     </div>
-  </div>
+
+</div>
