--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary">
+<nav class="navbar navbar-expand-lg bg-body-tertiary mx-auto mb-3">
     <div class="container-fluid">
         <a class="navbar-brand" href="#">Navbar</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
@@ -7,26 +7,16 @@
         </button>
         <div class="collapse navbar-collapse" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                <li class="nav-item" >
+                    <a class="nav-link active" aria-current="page" routerLink="/movies"  >Home</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="#">Link</a>
+                    <a class="nav-link" routerLink="/favourites">Link</a>
                 </li>                
                
             </ul>
-           <!--  <form   class="d-flex" 
-                    role="search"
-                    (ngSubmit)="emitMovie()">
-                <input 
-                        class="form-control me-2" 
-                        type="search" 
-                        placeholder="Search" 
-                        aria-label="Search"
-                        [(ngModel)]="movieTitle">
-
-                <button class="btn btn-outline-success" type="submit">Search</button>
-            </form> -->
         </div>
     </div>
+   
 </nav>
+<router-outlet></router-outlet>
