Service and login component started

--- a/src/app/shared/navbar/navbar.component.html
+++ b/src/app/shared/navbar/navbar.component.html
@@ -1,17 +1,18 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary mx-auto mb-3">
+<nav class="navbar navbar-expand-lg bg-body-tertiary mx-auto mb-3 rounded-bottom">
     <div class="container-fluid">
-        <a class="navbar-brand" href="#">Navbar</a>
+        <!-- <a class="navbar-brand" href="#"><img class="" src="../../../assets/images/icon.png" alt="home icon"></a> -->
+        <img class="home_icon" src="../../../assets/images/icon.png" alt="home icon" routerLink="/movies">
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent"
             aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
-        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <div class="collapse navbar-collapse ml-5" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
                 <li class="nav-item" >
-                    <a class="nav-link active" aria-current="page" routerLink="/movies"  >Home</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/movies">Movies</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" routerLink="/favourites">Link</a>
+                    <a class="nav-link active" aria-current="page" routerLink="/favourites">Favs</a>
                 </li>                
                
             </ul>
