--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,4 +1,23 @@
-<div class="card w-50 mx-auto mt-5">
+ 
+  <div class="card text-center mx-auto mt-5" style="width: 25rem;">
+    <div class="card-body">
+      <h5 class="card-title">First, you must create Your Token</h5>
+      <div *ngIf="!requestToken && !errorMessage">
+        <button class="btn btn-primary" (click)="getRequestToken()">Get Request Token</button>
+      </div>
+      <div *ngIf="requestToken">
+        <a class="btn btn-primary" [href]="authUrl">Authorize</a>
+      </div>
+      <div *ngIf="errorMessage" class="text-danger mt-3">
+        {{ errorMessage }}
+      </div>
+    </div>
+  </div>
+  
+  
+
+
+  <div class="card w-50 mx-auto mt-5" >
     <div class="card-header">
       <h3>Iniciar sesión</h3>
     </div>
@@ -6,14 +25,15 @@
       <form (ngSubmit)="login()" class="mx-auto my-4 ">
         <div class="form-group">
           <label>Nombre de usuario:</label>
-          <input type="text" class="form-control form-control-lg" [(ngModel)]="username" required>
+          <input type="text" class="form-control form-control-lg" name="username" [(ngModel)]="username" required>
         </div>
         <div class="form-group">
           <label>Contraseña:</label>
-          <input type="password" class="form-control form-control-lg" [(ngModel)]="password" required>
+          <input type="password" class="form-control form-control-lg" name="password" [(ngModel)]="password" required>
         </div>
         <button type="submit" class="btn btn-primary btn-lg btn-block">Iniciar sesión</button>
       </form>
     </div>
   </div>
-  
+
+
