--- a/src/app/movies/pages/movie-list/movie-list.component.html
+++ b/src/app/movies/pages/movie-list/movie-list.component.html
@@ -8,23 +8,24 @@
                 name="movieTitle"
                 [(ngModel)]="movieTitle">
 
-            <button class="btn btn-outline-success" type="submit">Search</button>
+            <button class="custom-button" type="submit">Search</button>
         </form>
     </div>
+
 </div>
 
 <div class="row">
-    <div class="col-md-4 col-sm-6 mx-auto mb-3" *ngFor="let movie of movieList">
+    <div class="col-lg-3 col-md-4 col-sm-6 mx-auto mb-3" *ngFor="let movie of movieList">
         <div class="card">
             <img class="card-img-top" [src]="movie.poster_path | posterImage:'w500' " alt="Card image cap">
             <div class="card-body">
                 <h5 class="card-title">{{movie.title}}</h5>
                 <ul class="list-group list-group-flush">
-                    <li class="list-group-item">{{movie.release_date}}</li>
-                    <li class="list-group-item">{{movie.popularity}}</li>
+                    <li class="list-group-item">Release Date: {{movie.release_date}}</li>
+                    <li class="list-group-item">Popularity: {{movie.popularity}}</li>
                 </ul>
             </div>
-            <button class="btn btn-outline-dark" type="submit" [routerLink]="['/movie-details', movie.id]">Know more...</button>
+            <button class="custom-button" type="submit" [routerLink]="['/movie-details', movie.id]">Know more...</button>
         </div>
     </div>
 </div>
