--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -1,39 +1,37 @@
- 
-  <div class="card text-center mx-auto mt-5" style="width: 25rem;">
-    <div class="card-body">
-      <h5 class="card-title">First, you must create Your Token</h5>
-      <div *ngIf="!requestToken && !errorMessage">
-        <button class="btn btn-primary" (click)="getRequestToken()">Get Request Token</button>
-      </div>
-      <div *ngIf="requestToken">
-        <a class="btn btn-primary" [href]="authUrl">Authorize</a>
-      </div>
-      <div *ngIf="errorMessage" class="text-danger mt-3">
-        {{ errorMessage }}
-      </div>
-    </div>
+<div class="card w-50 mx-auto mt-5">
+  <div class="card-header">
+    <h3>Log In</h3>
   </div>
-  
-  
+  <div class="card-body">
+    <form (ngSubmit)="login()" class="mx-auto my-4">
+      <div class="form-group">
+        <label>Username:</label>
+        <input
+          type="text"
+          class="form-control form-control-lg"
+          name="username"
+          [(ngModel)]="username"
+          required
+        />
+      </div>
+      <div class="form-group mb-3">
+        <label>Password:</label>
+        <input
+          type="password"
+          class="form-control form-control-lg"
+          name="password"
+          [(ngModel)]="password"
+          required
+        />
+      </div>
+      <button type="submit" class="btn btn-primary btn-lg btn-block">
+        Iniciar sesión
+      </button>
+    </form>
 
+    <div class="alert alert-danger" *ngIf="error">
+      The user name or password is not valid.
+    </div>
 
-  <div class="card w-50 mx-auto mt-5" >
-    <div class="card-header">
-      <h3>Iniciar sesión</h3>
-    </div>
-    <div class="card-body">
-      <form (ngSubmit)="login()" class="mx-auto my-4 ">
-        <div class="form-group">
-          <label>Nombre de usuario:</label>
-          <input type="text" class="form-control form-control-lg" name="username" [(ngModel)]="username" required>
-        </div>
-        <div class="form-group">
-          <label>Contraseña:</label>
-          <input type="password" class="form-control form-control-lg" name="password" [(ngModel)]="password" required>
-        </div>
-        <button type="submit" class="btn btn-primary btn-lg btn-block">Iniciar sesión</button>
-      </form>
-    </div>
   </div>
-
-
+</div>
