--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -1,4 +1,4 @@
-<nav class="navbar navbar-expand-lg bg-body-tertiary mx-auto mb-3 rounded-bottom">
+<nav class="navbar bg-light navbar-expand-lg bg-body-tertiary mx-auto mb-3 rounded-bottom">
     <div class="container-fluid">
         <!-- <a class="navbar-brand" href="#"><img class="" src="../../../assets/images/icon.png" alt="home icon"></a> -->
         <img class="home_icon" src="../../../assets/images/icon.png" alt="home icon" routerLink="/movies">
@@ -8,16 +8,11 @@
         </button>
         <div class="collapse navbar-collapse ml-5" id="navbarSupportedContent">
             <ul class="navbar-nav me-auto mb-2 mb-lg-0">
-                <li class="nav-item" >
-                    <a class="nav-link active" aria-current="page" routerLink="/movies">Movies</a>
-                </li>
-                <li class="nav-item">
-                    <a class="nav-link active" aria-current="page" routerLink="/favourites">Favs</a>
-                </li>                
-               
+                <li class="nav-item" *ngFor="let route of routes" >
+                    <a class="nav-link" aria-current="page" routerLink={{route.route}} routerLinkActive="active" >{{route.name}}</a>
+                </li>      
             </ul>
         </div>
     </div>
    
 </nav>
-<router-outlet></router-outlet>
