--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,3 +1,6 @@
+@import "bootstrap/scss/bootstrap";
+@import url("https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap");
+
 body,
 html {
   padding: 0;
@@ -15,4 +18,27 @@ html {
     rgba(9, 9, 121, 1) 0%,
     rgba(2, 0, 36, 1) 100%
   );
+}
+
+.custom-button {
+  min-width: 130px;
+  height: 40px;
+  color: #fff;
+  padding: 5px 10px;
+  font-weight: bold;
+  cursor: pointer;
+  transition: all 0.3s ease;
+  position: relative;
+  display: inline-block;
+  outline: none;
+  border-radius: 5px;
+  border: none;
+  background-size: 120% auto;
+  background-image: linear-gradient(315deg, #43cea2 0%, #185a9d 75%);
+}
+.custom-button:hover {
+  background-position: right center;
+}
+.custom-button:active {
+  top: 2px;
 }
