--- a/src/app/movies/pages/movie-details/movie-details.component.html
+++ b/src/app/movies/pages/movie-details/movie-details.component.html
@@ -1,25 +1,27 @@
-<div class="row d-flex justify-content-center">
 
-    <div class="col-xs-12 col-sm-12 col-md-8 col-lg-6 d-flex justify-content-center mx-auto mb-3 mt-3">
+<ng-container *ngIf="movie;else loading">
+<div class="row d-flex justify-content-center py-4">
+
+    <div class="col-xs-12 col-sm-12 col-md-12 col-lg-6 d-flex justify-content-center me-auto">
         <img class="card-img-top img-fluid rounded " [src]="movie.poster_path | posterImage:'w500' " alt="Card image cap">
     </div>
 
-    <div class="col mx-auto m-3 d-flex justify-content-center">
-
-        <div class="card details">
-            <h1 class="display-4">Movie Information</h1>
-            <p class="lead">Below you can find information about a movie:</p>
+    <div class="col ms-auto d-flex justify-content-center">
+        <div class="card p-4">
+            <h1 class="display-4">{{ movie.title | titlecase }}</h1>
+            <div class="d-flex flex-column align-items-end">
+                <ngb-rating [rate]="movie.vote_average" [readonly]="true"></ngb-rating>
+                <span class="text-muted small">{{ movie.vote_average }}</span>
+            </div>
             <hr class="my-4">
             <div class="row">
                 <div class="col-md-6 col-xs-12">
-                    <p><strong>Title:</strong> {{ movie.title }}</p>
-                    <p><strong>Original Title:</strong> {{ movie.original_title }}</p>
+                    <p><strong>Original Title:</strong> {{ movie.original_title | titlecase }}</p>
                     <p><strong>Release Date:</strong> {{ movie.release_date }}</p>
 
                 </div>
                 <div class="col-md-6">
                     <p><strong>Popularity:</strong> {{ movie.popularity }}</p>
-                    <p><strong>Vote Average:</strong> {{ movie.vote_average }}</p>
                     <p><strong>Vote Count:</strong> {{ movie.vote_count }}</p>
 
                 </div>
@@ -30,7 +32,23 @@
                     <p><strong>Overview:</strong> {{ movie.overview }}</p>
                 </div>
             </div>
+
+            <div class="row" >
+                <span>Rate:</span>
+                <ngb-rating [(rate)]="userRate" (click)="rate()" ></ngb-rating>
+            </div>
+
+            <div class="row">
+
+                <button (click)="addToFavourite()" class="custom-button">Add to favs</button>
+            </div>
         </div>
 
     </div>
 </div>
+</ng-container>
+
+<ng-template #loading>
+    <app-spinner></app-spinner>
+</ng-template>
+
