add icon routing

--- a/src/app/shared/components/navbar/navbar.component.html
+++ b/src/app/shared/components/navbar/navbar.component.html
@@ -6,7 +6,7 @@
       class="home_icon"
       src="../../../assets/images/icon.png"
       alt="home icon"
-      routerLink="/movies"
+      routerLink="/"
     />
     <button
       class="navbar-toggler"
