--- a/src/app/auth/login/login.component.html
+++ b/src/app/auth/login/login.component.html
@@ -4,7 +4,7 @@
   </div>
   <div class="card-body">
     <form (ngSubmit)="login()" class="mx-auto my-4">
-      <div class="form-group">
+      <div class="form-group mb-3">
         <label>Username:</label>
         <input
           type="text"
